--- a/styles.css
+++ b/styles.css
@@ -316,13 +316,13 @@ body {
   position: fixed;
   top: 50%;
   left: 50%;
-  width: 32px;
-  height: 32px;
-  margin-left: -16px; /* half width */
-  margin-top: -16px; /* half height */
+  width: 24px;
+  height: 24px;
+  margin-left: -12px; /* half width */
+  margin-top: -12px; /* half height */
   pointer-events: none; /* allow clicks to pass through */
   z-index: 1000;
-  background-image: url('data:image/svg+xml;utf8,<svg fill="none" stroke="red" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="12" r="10"/><line x1="12" y1="2" x2="12" y2="22"/><line x1="2" y1="12" x2="22" y2="12"/></svg>');
+  background-image: url('data:image/svg+xml;utf8,<svg fill="none" stroke="red" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><line x1="12" y1="2" x2="12" y2="22"/><line x1="2" y1="12" x2="22" y2="12"/></svg>');
   background-repeat: no-repeat;
   background-position: center;
 }
